--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>EcoEats</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet/less" type="text/css" href="styles.less">
 	<script src="less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
