--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 
 <head>
 	<title>EcoEats</title>
+	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet/less" type="text/css" href="styles.less">
 	<script src="less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:400,400italic,700' rel='stylesheet' type='text/css'>
 	<style>
 
 
