--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet/less" type="text/css" href="styles.less">
 	<script src="less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:400,400italic,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<style>
 
 
@@ -19,7 +19,7 @@
 
 <body>
 
-		Hello World!
+		<p>Hello World!<p>
 
 	<script>
 
