--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
 	<title>EcoEats</title>
 	<!-- STYLESHEETS -->
-	<link rel="stylesheet" type="text/css" href="reset.css">
-	<link rel="stylesheet/less" type="text/css" href="styles.less">
-	<script src="less.js" type="text/javascript"></script>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style/reset.css">
+	<link rel="stylesheet/less" type="text/css" href="style/styles.less">
+	<script src="style/less.js" type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="style/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<style>
 
