Cleansed HTML form elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
 <body>
 
+	<div id="sky">
 		<img id="teaserLogo" src="style/whiteLogo.png">
+	</div>
+	<div id="grass">
+		<input type="text">
+	</div>
 
 	<script>
 
