Added building banner

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 	<div id="sky">
 		<img id="teaserLogo" src="style/whiteLogo.png">
+		<p>Create an ecosystem of tastier eating by connecting people who can cook with people who can help pay for ingredients.</p>
+	</div>
+	<div id="buildings">
+		<img src="style/buildingsBanner.png">
 	</div>
 	<div id="grass">
 		<input type="text">
