--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		<img src="style/buildingsBanner.png">
 	</div>
 	<div id="grass">
-		<input type="text">
+		<input id="teaserForm" type="text">
+		<button>Notify Me!</button>
 	</div>
 
 	<script>
