--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 
 	<div id="sky">
 		<img id="teaserLogo" src="style/whiteLogo.png">
-		<p>Create an ecosystem of tastier eating by connecting people who can cook with people who can help pay for ingredients.</p>
 	</div>
 	<div id="buildings">
 		<img src="style/buildingsBanner.png">
+		<p>Create an ecosystem of tastier eating by connecting people who can cook with people who can help pay for ingredients.</p>
 	</div>
 	<div id="grass">
 		<input id="teaserForm" type="text">
 		<button>Notify Me!</button>
+	</div>
+	<div id="footer">
+		<p>Contact Sunny Shah (sshah135@hawk.iit.edu)</p>
 	</div>
 
 	<script>
