Turned spellcheck off

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p>Create an ecosystem of tastier eating by connecting people who can cook with people who can help pay for ingredients.</p>
 	</div>
 	<div id="grass">
-		<input id="teaserForm" type="text">
+		<input id="teaserForm" type="text" spellcheck="false">
 		<button>Notify Me!</button>
 	</div>
 	<div id="footer">
