Fixed Form Style

--- a/index.html
+++ b/index.html
@@ -20,20 +20,17 @@
 <body>
 
 	<div id="sky">
-		<img id="teaserLogo" src="style/whiteLogo.png">
+		<img id="teaserLogo" src="style/whiteLogo.png"/>
 	</div>
 	<div id="buildings">
-		<img src="style/buildingsBanner.png">
-		<p>Create an ecosystem of tastier eating by connecting people who can cook with people who can help pay for ingredients.</p>
+		<img src="style/buildingsBanner.png"/>
+		<p>Create an ecosystem of tastier eating by connecting people who can cook with hungry people who can help pay for ingredients.</p>
 	</div>
-	<div id="grass">
-		<input id="teaserForm" type="text" spellcheck="false">
-		<button>Notify Me!</button>
+	<div id="wood">
+		<p>I want to hear more!</p>
+		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
+		<button id="teaserSubmit">&#10004;</button>
 	</div>
-	<div id="footer">
-		<p>Contact Sunny Shah (sshah135@hawk.iit.edu)</p>
-	</div>
-
 	<script>
 
 
