--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="style/less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
 	<style>
 
 
@@ -22,20 +23,23 @@
 	<div id="sky">
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
 	</div>
+
 	<div id="buildings">
 		<img src="style/buildingsBanner.png"/>
 		<p>Create an ecosystem of tastier eating by connecting people who can cook with hungry people who can help pay for ingredients.</p>
 	</div>
+
 	<div id="wood">
-		<p>I want to hear more!</p>
+		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
 		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
 		<button id="teaserSubmit">&#10004;</button>
+
+		<div id="footer">
+			<p>Sunny Shah, Founder and CEO | EcoEats 2015 | Webpage by Vinesh Kannan</p>
+		</div>
 	</div>
-	<script>
 
 
-
-	</script>
 
 </body>
 
