--- a/index.html
+++ b/index.html
@@ -32,14 +32,46 @@
 	<div id="wood">
 		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
 		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
-		<button id="teaserSubmit">&#10004;</button>
+		<button id="teaserSubmit" onclick="submitChef();">&#10004;</button>
 
 		<div id="footer">
 			<p>Sunny Shah, Founder and CEO | EcoEats 2015 | Webpage by Vinesh Kannan</p>
 		</div>
 	</div>
 
+	<div style="display: block;">
+		<form action="https://docs.google.com/a/hawk.iit.edu/forms/d/1C_2NjqxMxBH6o21nmDlE0y2EoFEjG-uw4Qr428SLFZU/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
+		<div class="ss-form-question errorbox-good" role="listitem">
+		<div dir="auto" class="ss-item ss-item-required ss-text"><div class="ss-form-entry">
+		<label class="ss-q-item-label" for="entry_1282620408"><div class="ss-q-title">Email Address
+		<label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+		<span class="ss-required-asterisk" aria-hidden="true">*</span></div>
+		<div class="ss-q-help ss-secondary-text" dir="auto"></div></label>
+		<input type="text" name="entry.1282620408" value="" class="ss-q-short" id="entry_1282620408" dir="auto" aria-label="Email Address  " aria-required="true" required="" title="">
+		<div class="error-message" id="396641450_errorMessage"></div>
+		<div class="required-message">This is a required question</div>
+		</div></div></div>
+		<input type="hidden" name="draftResponse" value="[,,&quot;810585406799945146&quot;]">
+		<input type="hidden" name="pageHistory" value="0">
+		<input type="hidden" name="fvv" value="0">
+		<input type="hidden" name="fbzx" value="810585406799945146">
+		<div class="ss-item ss-navigate"><table id="navigation-table"><tbody><tr><td class="ss-form-entry goog-inline-block" id="navigation-buttons" dir="ltr">
+		<input type="submit" name="submit" value="Submit" id="ss-submit" class="jfk-button jfk-button-action ">
+		<div class="ss-password-warning ss-secondary-text">Never submit passwords through Google Forms.</div></td>
+		</tr></tbody></table></div></ol></form>
+	</div>
 
+	<script type="text/javascript">
+	
+		function submitChef(){
+			var googleInput = document.getElementById('entry_1282620408');
+			var userInput = document.getElementById('teaserForm').value;
+				googleInput.value = userInput;
+			var submitButton = document.getElementById('ss-submit');
+				submitButton.click();
+		}
+
+	</script>
 
 </body>
 
