--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 <body>
 
 	<div id="sky">
+		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
+		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
 	</div>
 
-	<div id="buildings">
-		<img src="style/buildingsBanner.png"/>
+	<div id="grass">
 		<p>Create an ecosystem of tastier eating by connecting people who can cook with hungry people who can help pay for ingredients.</p>
 	</div>
 
