--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 	  }(document, 'script', 'facebook-jssdk'));
 	</script>
 
+	<header>
+		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	</header>
+
 	<div id="sky">
 		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
