Transparent fixed header

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 	</script>
 
 	<header>
+		<img id="headerLogo" src="style/greenLogo.png"/>
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
