--- a/index.html
+++ b/index.html
@@ -44,17 +44,20 @@
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
-	<div id="sky">
+	<div class="sky">
 		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
 		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
 	</div>
 
-	<div id="grass">
+	<div class="grass">
 		<p>Create an ecosystem of tastier eating by connecting people who can cook with hungry people who can help pay for ingredients.</p>
 	</div>
 
-	<div id="wood">
+	<div class="wood">
+		<h1>Upcoming Meals</h1>
+		<div id="upcomingMeals">Hello</div>
+		<h1>Become a Chef</h1>
 		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
 		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
 		<button id="teaserSubmit" onclick="submitChef();">&#10004;</button>
