Styled meals page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<div class="wood">
 		<h1>Upcoming Meals</h1>
-		<div id="upcomingMeals">Hello</div>
+		<div id="upcomingMeals">No meals are currently listed. Host your own!</div>
 		<h1>Become a Chef</h1>
 		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
 		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
