Added firebase.js SDK

--- a/meals.html
+++ b/meals.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
+	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
 
@@ -52,7 +53,7 @@
 	</div>
 
 	<div class="grass">
-		
+
 	</div>
 
 	<div class="wood">
