--- a/meals.html
+++ b/meals.html
@@ -65,7 +65,17 @@
 
 	<script type="text/javascript">
 
-		
+		var database = new Firebase('https://ecoeats.firebaseio.com/');
+		var eventDate = new Date(2015, 8, 25, 20);
+		/*database.push({
+			name: "Teriyaki Chicken and Potatoes",
+			id: "aaa000",
+			chef: "Sunny Shah",
+			img: "teriyakiChickenPotato.jpg",
+			date: eventDate,
+			capacity: 5,
+			price: 7
+		});*/
 
 	</script>
 
