Added to mealsPreview CSS class

--- a/meals.html
+++ b/meals.html
@@ -56,6 +56,9 @@
 				<div class="mealPreview">
 					<h2>{{Meal Name}}</h2>
 				</div>
+				<div class="mealPreview">
+					<h2>{{Meal Name}}</h2>
+				</div>
 
 			</div>
 		</div>
@@ -95,7 +98,7 @@
 				var meal = new Meal(childData);
 				meals.push(meal);
 			});
-			loadMeals();
+			//loadMeals();
 		});
 
 
