Styled heading slots

--- a/meals.html
+++ b/meals.html
@@ -53,11 +53,17 @@
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals">
 
-				<div class="mealPreview">
-					<h2>{{Meal Name}}</h2>
+				<div class="mealPreview" style="background-image: url('style/meals/teriyakiChickenPotato.jpg');">
+					<div class="mealTitle">
+						<h2>{{Meal Name}}</h2>
+						<h3>{{Chef Names}}</h3>
+					</div>
 				</div>
-				<div class="mealPreview">
-					<h2>{{Meal Name}}</h2>
+				<div class="mealPreview" style="background-image: url('style/meals/dominosPizza.jpg');">
+					<div class="mealTitle">
+						<h2>{{Meal Name}}</h2>
+						<h3>{{Chef Names}}</h3>
+					</div>
 				</div>
 
 			</div>
