Added Dwolla Button Generator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</script>
 
 	<header>
-		<img id="headerLogo" src="style/greenLogo.png"/>
+		<img id="headerLogo" onclick="window.location='index.html'" src="style/greenLogo.png"/>
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
@@ -66,7 +66,7 @@
 		<button id="teaserSubmit" onclick="submitChef();">&#10004;</button>
 
 		<div id="footer">
-			<p>Sunny Shah, Founder and CEO | EcoEats 2015 | Webpage by Vinesh Kannan</p>
+			<p>Illinois Institute of Technology | EcoEats 2015 | Webpage by Vinesh Kannan</p>
 		</div>
 	</div>
 
