--- a/meals.html
+++ b/meals.html
@@ -50,9 +50,12 @@
 	<div class="sky">
 		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<div class="wood">
+			<div id="mealDisplay" style="display: block;">
+				<h1 class="meal-name"></h1>
+				<img class="meal-img" src="style/meals/dominosPizza.jpg">
+			</div>
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals"></div>
-
 		</div>
 		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
 	</div>
