Sliding meal preview boxes

--- a/meals.html
+++ b/meals.html
@@ -47,13 +47,11 @@
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
-	<div class="sky">
-		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
-		<div class="wood">
+	<div class="wood">
+			<div class="headerSpace"></div>
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals"></div>
 		</div>
-		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
 	</div>
 
 	<div class="wood">
