Mimicked Dwolla Button

--- a/meals.html
+++ b/meals.html
@@ -51,8 +51,10 @@
 			<div class="headerSpace"></div>
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals"></div>
-		</div>
 	</div>
+
+<script src="https://www.dwolla.com/scripts/button.min.js"></script>
+<a class="d-btn d-btn-simple" data-key="DZ4cNXNsCrG4xbTyKPGqt4HEasxWBqk1c6pClzTSps5HU4bbDV" data-redirect="http://ecoeats.tk/" data-label="Pay Now" data-name="EcoEats Meal" data-description="Meal" data-amount="5" data-guest-checkout="true" data-type="simple"><span class="d-btn-text">Pay Now</span><span class="d-btn-icon"></span></a>
 
 	<div class="wood">
 		<div id="footer">
