--- a/template.html
+++ b/template.html
@@ -13,6 +13,7 @@
 	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
 	<script type="text/javascript" src="moment.js"></script>
 	<script type="text/javascript" src="meal.js"></script>
+	<script src="https://www.dwolla.com/scripts/button.min.js"></script>
 	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
