--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
+	<div class="headerSpace"></div>
+
 	<div class="sky">
 		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
