--- a/teaser.html
+++ b/teaser.html
@@ -48,13 +48,14 @@
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
-	<div id="sky">
+	<div class="sky">
+		<div class="headerSpace"></div>
 		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
 		<img id="teaserLogo" src="style/whiteLogo.png"/>
 		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
 	</div>
 
-	<div id="grass">
+	<div class="grass">
 		<p>Thank you! Now go tell your friends.</p>
 	</div>
 
