--- a/meals.html
+++ b/meals.html
@@ -54,6 +54,14 @@
 			<div id="upcomingMeals"></div>
 	</div>
 
+<script src="paypal-button.min.js?merchant=QWZMVF8ZHS2P4"
+    data-button="buynow"
+    data-name="My product"
+    data-amount="1.00"
+    async
+></script>
+
+
 	<div class="wood">
 		<div id="footer">
 			<p>Illinois Institute of Technology | EcoEats 2015 | Webpage by Vinesh Kannan</p>
