--- a/meals.html
+++ b/meals.html
@@ -17,7 +17,7 @@
 	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
-
+	
 
 	</style>
 	<script>
@@ -54,12 +54,17 @@
 			<div id="upcomingMeals"></div>
 	</div>
 
-<script src="paypal-button.min.js?merchant=QWZMVF8ZHS2P4"
-    data-button="buynow"
-    data-name="My product"
-    data-amount="1.00"
-    async
-></script>
+<form class="paypalForm" method="post" action="https://www.paypal.com/cgi-bin/webscr" class="paypal-button" target="_top">
+	<div class="hide" id="errorBox"></div>
+	<input type="hidden" name="button" value="buynow">
+	<input type="hidden" name="item_name" value="My product">
+	<input type="hidden" name="amount" value="1.00">
+	<input type="hidden" name="cmd" value="_xclick">
+	<input type="hidden" name="business" value="QWZMVF8ZHS2P4">
+	<input type="hidden" name="bn" value="JavaScriptButton_buynow">
+	<input type="hidden" name="env" value="www">
+	<button type="submit" class="paypal-button large">Buy Now</button>
+</form>
 
 
 	<div class="wood">
