Specified #teaserSubmit in button styles

--- a/meals.html
+++ b/meals.html
@@ -17,7 +17,7 @@
 	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
-	
+
 
 	</style>
 	<script>
@@ -52,8 +52,8 @@
 			<div class="headerSpace"></div>
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals"></div>
-	</div>
-
+	
+	<div class="mealPay">
 <form class="paypalForm" method="post" action="https://www.paypal.com/cgi-bin/webscr" class="paypal-button" target="_top">
 	<div class="hide" id="errorBox"></div>
 	<input type="hidden" name="button" value="buynow">
@@ -63,9 +63,11 @@
 	<input type="hidden" name="business" value="QWZMVF8ZHS2P4">
 	<input type="hidden" name="bn" value="JavaScriptButton_buynow">
 	<input type="hidden" name="env" value="www">
-	<button type="submit" class="paypal-button large">Buy Now</button>
+	<button type="submit" class="paypal-button large">Pay Now</button>
 </form>
+	</div>
 
+	</div>
 
 	<div class="wood">
 		<div id="footer">
