Finished styling button

--- a/meals.html
+++ b/meals.html
@@ -53,7 +53,9 @@
 			<h1>Upcoming Meals</h1>
 			<div id="upcomingMeals"></div>
 	
+<div class="mealPreview">
 	<div class="mealPay">
+		<p>Join us at SSV Middle Today at 8:00 PM for this meal.</p>
 <form class="paypalForm" method="post" action="https://www.paypal.com/cgi-bin/webscr" class="paypal-button" target="_top">
 	<div class="hide" id="errorBox"></div>
 	<input type="hidden" name="button" value="buynow">
@@ -66,6 +68,7 @@
 	<button type="submit" class="paypal-button large">Pay Now</button>
 </form>
 	</div>
+</div>
 
 	</div>
 
