Sample banana event

--- a/edit.html
+++ b/edit.html
@@ -80,6 +80,7 @@
 				name: "Teriyaki Chicken and Potatoes",
 				id: "aaa000",
 				chef: "Paulina Pys and Misha Shah",
+				location: "SSV Middle",
 				timestamp: eventDate.getTime(),
 				img: "teriyakiChickenPotato.jpg",
 				capacity: 5,
