--- a/edit.html
+++ b/edit.html
@@ -53,13 +53,20 @@
 			<div class="headerSpace"></div>
 			<h1>Add/Edit Meals</h1>
 			<div id="editForm">
-				<input id="new-name" type="text" placeholder="Meal Name">
-				<input id="new-chef" type="text" placeholder="Chef">
-				<input id="new-price" type="number" placeholder="5">
-				<input id="new-capacity" type="number" placeholder="5">
-				<input id="new-timestamp" type="datetime">
-				<input id="new-location" type="text" placeholder="Location">
-				<input id="new-img" type="text" placeholder="Image URL">
+				<label>name</label>
+					<input id="new-name" type="text" placeholder="Meal Name">
+				<label>chef</label>
+					<input id="new-chef" type="text" placeholder="Chef">
+				<label>price</label>
+					<input id="new-price" type="number" placeholder="5">
+				<label>capacity</label>
+					<input id="new-capacity" type="number" placeholder="5">
+				<label>timestamp</label>
+					<input id="new-timestamp" type="datetime">
+				<label>location</label>
+					<input id="new-location" type="text" placeholder="Location">
+				<label>img</label>
+					<input id="new-img" type="text" placeholder="Image URL">
 			</div>
 			<div id="upcomingMeals"></div>
 	</div>
