Styled form animations

--- a/edit.html
+++ b/edit.html
@@ -53,20 +53,34 @@
 			<div class="headerSpace"></div>
 			<h1>Add/Edit Meals</h1>
 			<div id="editForm">
-				<label>name</label>
+				<label>
+					<div>name</div>
 					<input id="new-name" type="text" placeholder="Meal Name">
-				<label>chef</label>
+				</label>
+				<label>
+					<div>chef</div>
 					<input id="new-chef" type="text" placeholder="Chef">
-				<label>price</label>
+				</label>
+				<label class="number">
+					<div>price</div>
 					<input id="new-price" type="number" placeholder="5">
-				<label>capacity</label>
+				</label>
+				<label class="number">
+					<div>capacity</div>
 					<input id="new-capacity" type="number" placeholder="5">
-				<label>timestamp</label>
+				</label>
+				<label>
+					<div>timestamp</div>
 					<input id="new-timestamp" type="datetime">
-				<label>location</label>
+				</label>
+				<label>
+					<div>location</div>
 					<input id="new-location" type="text" placeholder="Location">
-				<label>img</label>
+				</label>
+				<label>
+					<div>img</div>
 					<input id="new-img" type="text" placeholder="Image URL">
+				</label>
 			</div>
 			<div id="upcomingMeals"></div>
 	</div>
