Moved label margin

--- a/edit.html
+++ b/edit.html
@@ -70,12 +70,16 @@
 					<input id="new-capacity" type="number" placeholder="5">
 				</label>
 				<label>
-					<div>timestamp</div>
-					<input id="new-timestamp" type="datetime">
-				</label>
-				<label>
 					<div>location</div>
 					<input id="new-location" type="text" placeholder="Location">
+				</label>
+				<label class="number">
+					<div>date</div>
+					<input id="new-date" type="date">
+				</label>
+				<label class="number">
+					<div>time</div>
+					<input id="new-time" type="time">
 				</label>
 				<label>
 					<div>img</div>
