--- a/edit.html
+++ b/edit.html
@@ -53,7 +53,7 @@
 			<div class="headerSpace"></div>
 			<h1>Add/Edit Meals</h1>
 			<p>Enter your information below for a new meal. To edit an existing meal, find it in the selector to load its data.</p>
-			<select>
+			<select id="mealSelector">
 				<option value="new-meal">Add New Meal</option>
 				<option value="meal-id">Sample Meal</option>
 			</select>
