--- a/edit.html
+++ b/edit.html
@@ -91,7 +91,7 @@
 					<div>img</div>
 					<input id="new-img" type="text" placeholder="Image URL">
 				</label>
-				<button id="teaserSubmit">Update Meal</button>
+				<button id="teaserSubmit" onclick="updateMeal();">Update Meal</button>
 			</div>
 	</div>
 
