--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 				var key = childSnapshot.key();
 				var childData = childSnapshot.val();
 				var meal = new Meal(childData);
+				meal.id = key;
 				meals.push(meal);
 			});
 			loadMeals();
