Added note to homepage

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 	<div class="wood">
 		<h1>Upcoming Meals</h1>
+		<p>To gauge what meals students are interested in, EcoEats is pausing student chef meals and ordering from local restaurants. We hope you will sign up for and enjoy these offerings. Email pay.ecoeats@gmail.com if you would like to suggest a meal!</p>
 		<div id="upcomingMeals">No meals are currently listed. Host your own!</div>
 		<h1>Become a Chef</h1>
 		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
