--- a/stats.html
+++ b/stats.html
@@ -6,15 +6,12 @@
 	<title>EcoEats</title>
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
-	<link rel="stylesheet/less" type="text/css" href="style/styles.less">
+	<link rel="stylesheet/less" type="text/css" href="style/stats-styles.less">
 	<script src="style/less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
 	<script type="text/javascript" src="moment.js"></script>
-	<script type="text/javascript" src="meal.js"></script>
-	<script type="text/javascript" src="utils.js"></script>
-	<script src="https://www.dwolla.com/scripts/button.min.js"></script>
 	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
@@ -49,56 +46,15 @@
 		<div class="fb-like" data-href="http://ecoeats.tk/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	</header>
 
-	<div class="sky">
-		<div class="headerSpace"></div>
-		<div id="clouds" style="background-image: url('style/cloudsBanner.png');"></div>
-		<img id="teaserLogo" src="style/whiteLogo.png"/>
-		<div id="buildings" style="background-image: url('style/buildingsBanner.png');"></div>
-	</div>
+	
+	<div class="headerSpace"></div>
 
-	<div class="grass">
-		<p>Create an ecosystem of tastier eating by connecting people who can cook with hungry people who can help pay for ingredients.</p>
-	</div>
-
-	<div class="wood">
-		<h1>Upcoming Meals</h1>
-		<p>To gauge what meals students are interested in, EcoEats is pausing student chef meals and ordering from local restaurants. We hope you will sign up for and enjoy these offerings. Email pay.ecoeats@gmail.com if you would like to suggest a meal!</p>
-		<div id="upcomingMeals">No meals are currently listed. Host your own!</div>
-		<h1>Become a Chef</h1>
-		<p>If you like food, people, and money, send us your email address and find out how you can become an EcoEats Chef!</p>
-		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
-		<button id="teaserSubmit" onclick="submitChef();">&#10004;</button>
-
-		<div id="footer">
-			<p>Illinois Institute of Technology | EcoEats 2015 | Webpage by Vinesh Kannan</p>
-		</div>
-	</div>
+	<p>Hello World</p>
+		
 
 	<script type="text/javascript">
 
-		function submitChef(){
-			var newUser = new Date();
-			var userInput = document.getElementById('teaserForm').value;
-			chefsDatabase.push({
-				timestamp: newUser.getTime(),
-				email: userInput
-			});
-			window.location = 'teaser.html';
-		}
 
-		var meals = [];
-		var mealDatabase = new Firebase('https://ecoeats.firebaseio.com/meals');
-		mealDatabase.once('value', function(snapshot){
-			snapshot.forEach(function(childSnapshot){
-				var key = childSnapshot.key();
-				var childData = childSnapshot.val();
-				var meal = new Meal(childData);
-				meals.push(meal);
-			});
-			loadMeals();
-		});
-
-		var chefsDatabase = new Firebase('https://ecoeats.firebaseio.com/chefs');
 
 	</script>
 
