--- a/stats.html
+++ b/stats.html
@@ -6,13 +6,12 @@
 	<title>EcoEats</title>
 	<!-- STYLESHEETS -->
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
-	<link rel="stylesheet/less" type="text/css" href="style/stats-styles.less">
 	<script src="style/less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
+	<link rel="stylesheet" type="text/css" href="style/stat-styles.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
 	<script type="text/javascript" src="moment.js"></script>
-	<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 	<style>
 
 
@@ -48,6 +47,8 @@
 
 	
 	<div class="headerSpace"></div>
+
+	<section class="stats-pane"></section>
 
 	<p>Hello World</p>
 		
