--- a/stats.html
+++ b/stats.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="style/reset.css">
 	<script src="style/less.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="style/styles.css">
-	<link rel="stylesheet" type="text/css" href="style/stat-styles.css">
+	<link rel="stylesheet" type="text/css" href="style/stats-style.css">
 	<link href='https://fonts.googleapis.com/css?family=Margarine|Bitter:s400,400italic,700' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="img/png" href="style/favicon.png" style="width:30px;">
 	<script type="text/javascript" src="moment.js"></script>
@@ -48,9 +48,22 @@
 	
 	<div class="headerSpace"></div>
 
-	<section class="stats-pane"></section>
+	<div class="pane-container">
 
-	<p>Hello World</p>
+		<div id="pane-slider">
+
+	<section class="stats-pane">
+		<p>Traction</p>
+	</section>
+
+
+	<section class="stats-pane">
+		<p>Testing</p>
+	</section>
+
+		</div>
+
+	</div>
 		
 
 	<script type="text/javascript">
