--- a/stats.html
+++ b/stats.html
@@ -68,7 +68,10 @@
 
 	<script type="text/javascript">
 
-
+		function slidePanes(width){
+			var slider = document.getElementById('pane-slider');
+			slider.style.marginLeft = width;
+		}
 
 	</script>
 
