Color is not changing to charcoal

--- a/stats.html
+++ b/stats.html
@@ -57,7 +57,9 @@
 		<div id="pane-slider">
 
 			<section class="stats-pane">
-				<p>Traction</p>
+				<div class="pane-content">
+					<p>Traction</p>
+				</div>
 			</section>
 
 			<section class="stats-pane">
