--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 		<div class="popup" id="stats">
 			<h1>See our stats!</h1>
-			<button onclick="closePopup('stats');">Close</button>
+			<button class="close" onclick="closePopup('stats');">Go!</button>
+			<button class="small" onclick="closePopup('stats');">Close</button>
 		</div>
 
 		<div id="footer">
