--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 		<div class="popup" id="stats">
 			<h1>See our stats!</h1>
-			<button class="close" onclick="closePopup('stats');">Go!</button>
+			<button onclick="window.location='stats.html'">Go!</button>
 			<button class="small" onclick="closePopup('stats');">Close</button>
 		</div>
 
