Hid stats entry

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 		<input id="teaserForm" type="text" spellcheck="false" placeholder="me@email.com"/>
 		<button id="teaserSubmit" onclick="submitChef();">&#10004;</button>
 
-		<div class="popup" id="stats">
+		<!--<div class="popup" id="stats">
 			<h1>See our stats!</h1>
 			<button onclick="window.location='stats.html'">Go!</button>
 			<button class="small" onclick="closePopup('stats');">Close</button>
-		</div>
+		</div>-->
 
 		<div id="footer">
 			<p>Illinois Institute of Technology | EcoEats 2015 | Webpage by Vinesh Kannan</p>
