--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<h1>See our stats!</h1>
 			<button onclick="window.location='stats.html'">Go!</button>
 			<button class="small" onclick="closePopup('stats');">Close</button>
-		</div>-->
+		</div>-->
 
 		<div id="footer">
 			<p>Illinois Institute of Technology | EcoEats 2015 | Webpage by Vinesh Kannan</p>
